--- a/gmall-gateway/src/main/resources/application.yml
+++ b/gmall-gateway/src/main/resources/application.yml
@@ -27,3 +27,15 @@ spring:
           uri: lb://wms-service
           predicates:
             - Path=/wms/**
+        - id: search-route
+          uri: lb://search-service
+          predicates:
+            - Host=search.gmall.com
+        - id: index-route
+          uri: lb://index-service
+          predicates:
+            - Host=gmall.com,www.gmall.com
+        - id: index-route2
+          uri: lb://index-service
+          predicates:
+            - Path=/index/**
