--- a/gmall-pms/src/main/resources/application.yml
+++ b/gmall-pms/src/main/resources/application.yml
@@ -37,3 +37,11 @@ spring:
     url: jdbc:mysql://192.168.184.128:3306/guli_pms
     username: root
     password: 123456
+  rabbitmq:
+    host: 192.168.184.128
+    port: 5672
+    virtual-host: /zzy
+    username: zzy
+    password: zzy
+    publisher-confirm-type: correlated
+    publisher-returns: true
