--- a/gmall-cart/src/main/resources/application.yml
+++ b/gmall-cart/src/main/resources/application.yml
@@ -40,6 +40,16 @@ spring:
       shutdown:
         await-termination: true
         await-termination-period: 60
+  rabbitmq:
+    host: 192.168.184.128
+    virtual-host: /zzy
+    username: zzy
+    password: zzy
+    listener:
+      simple:
+        prefetch: 1
+        acknowledge-mode: manual
+        concurrency: 4
 feign:
   sentinel:
     enabled: true
